✨ Allow setting model / language on new doc page
Fixes #264
Fixes #208
